<?xml version="1.0"?>
<package>
  <name>rose_html5_ui</name>
  <version>0.0.0</version>
  <description>The rose_html5_ui package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="tsr@todo.todo">tsr</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/rose_html5_ui</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>rose_ui_item_selector</build_depend>
  <build_depend>rose_ui_map_display</build_depend>
  <build_depend>rose_ui_script_selector</build_depend>
  <build_depend>rosbridge_library</build_depend>
  <build_depend>rosbridge_server</build_depend>
  <build_depend>roscomm</build_depend>
  <build_depend>rose_common</build_depend>
  <build_depend>rose_joystick</build_depend>
  <build_depend>rose21_platform</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>shared_variables</build_depend>
  <build_depend>web_video_server</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>rose_ui_item_selector</run_depend>
  <run_depend>rose_ui_map_display</run_depend>
  <run_depend>rose_ui_script_selector</run_depend>
  <run_depend>rosbridge_library</run_depend>
  <run_depend>rosbridge_server</run_depend>
  <run_depend>roscomm</run_depend>
  <run_depend>rose_common</run_depend>
  <run_depend>rose_joystick</run_depend>
  <run_depend>rose21_platform</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>shared_variables</run_depend>
  <run_depend>web_video_server</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>